Fix footer positioning Used this stackoverflow answer as reference: https://stackoverflow.com/a/20352949/17003609

--- a/assets/stylesheets/footer.css
+++ b/assets/stylesheets/footer.css
@@ -1,8 +1,6 @@
 footer {
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	right: 0;
+	width: 100%;
+	box-sizing: border-box;
 	background-color: rgb(28, 28, 32);
 	padding: 2rem;
 	display: flex;
