--- a/games/style.css
+++ b/games/style.css
@@ -8,6 +8,15 @@
 
 body {
     background-color: #060621;
+	margin: 0;
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
+}
+
+main {
+	margin: 1rem;
+	flex-grow: 1;
 }
 
 .gameName {
