--- a/legal/style.css
+++ b/legal/style.css
@@ -1,9 +1,17 @@
 body {
     background-color: #060621;
 	color: #f1f1f1;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	margin: 0;
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
+}
+
+main {
 	margin: 6rem;
 	margin-top: 8rem;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	flex-grow: 1;
 }
 
 h1 {
