--- a/style.css
+++ b/style.css
@@ -22,6 +22,15 @@ body{
     text-align: center;
     color: azure;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+	margin: 0;
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
+}
+
+main {
+	flex-grow: 1;
 }
 
 @font-face {
